//
//  AccessibilityIds.swift
//  ImageFeed
//
//  Created by Симонов Иван Дмитриевич on 09.04.2025.
//

enum AccessibilityIds {
	static let loginButton = "LoginButton"
	static let logoutButton = "LogoutButton"
	static let authViewController = "AuthViewController"
	static let webWiew = "UnsplashWebView"
	static let backButton = "SingleImageViewBackButton"
	static let likeButton = "LikeButton"
	static let imageListTableView = "ImageListTableView"
}
