...
		nameView.text = profile.name
		loginNameView.text = profile.loginName
		descriptionView.text = profile.bio
	}

	func showLogoutConfirmation() {
		let alertController = UIAlertController(title: "Пока, пока!", message: "Уверены, что хотите выйти?", preferredStyle: .alert)
		let yesAction = UIAlertAction(title: "Да", style: .destructive) { [weak self] _ in
			self?.presenter?.confirmLogout()
		}
		let noAction = UIAlertAction(title: "Нет", style: .default) { [weak self] _ in
			self?.dismiss(animated: true)
		}

...
